--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </section>
                 <section class="profile">
                     <h2>PROFIL</h2>
-                    <p>Travaillant actuellement provisoirement dans la restauration, je souhaite me convertir définitivement au domaine de la programmation web.
+                    <p>Travaillant actuellement provisoirement dans la restauration, je souhaite me convertir définitivement au domaine du développement web.
                     </p>
                     <p> Fort d'expérience précédentes, je suis très à l'aise avec la relation client
                         et les responsabilités. <br>
