--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/31305a7ee5.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>CV de Guillaume Salle</title>
 </head>
 <body>
 
