--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <section class="logiciels">
                     <h2>LOGICIELS</h2>
-                    <p>Microsoft WORD, Adobe Illustrator, Microsoft Excel, VS Code</p>
+                    <p>VS Code, Github, Microsoft WORD, Adobe Illustrator, Microsoft Excel</p>
                 </section>
 
                 <section class="langues">
